cmake_minimum_required(VERSION 3.23)
project(Advent_of_Code_2022)

set(CMAKE_CXX_STANDARD 20)

#MATH(EXPR stack_size "16 * 1024 * 1024 * 1024") # 16 Gb
#set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_subdirectory(Helpers)
list(APPEND EXTRA_LIBS Helpers)
list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/Helpers")

add_executable(Day1 day1.cpp)
add_executable(Day2 day2.cpp)
add_executable(Day3 day3.cpp Helpers/helper.cpp)
add_executable(Day4 day4.cpp Helpers/helper.cpp)
add_executable(Day5 day5.cpp Helpers/helper.cpp)
add_executable(Day6 day6.cpp Helpers/helper.cpp)
add_executable(Day7 day7.cpp Helpers/helper.cpp)
add_executable(Day8 day8.cpp Helpers/helper.cpp)
add_executable(Day9 day9.cpp Helpers/helper.cpp)
add_executable(Day10 day10.cpp Helpers/helper.cpp)
add_executable(Day11 day11.cpp Helpers/helper.cpp)
add_executable(Day12 day12.cpp Helpers/helper.cpp)
add_executable(Day13 day13.cpp Helpers/helper.cpp)
add_executable(Day14 day14.cpp Helpers/helper.cpp)
add_executable(Day15 day15.cpp Helpers/helper.cpp)
add_executable(Day16 day16.cpp Helpers/helper.cpp)
add_executable(Day17 day17.cpp Helpers/helper.cpp)
add_executable(Day18 day18.cpp Helpers/helper.cpp)
add_executable(Day19 day19.cpp Helpers/helper.cpp)
add_executable(Day20 day20.cpp Helpers/helper.cpp)
add_executable(Day21 day21.cpp Helpers/helper.cpp)
add_executable(Day22 day22.cpp Helpers/helper.cpp)
add_executable(Day23 day23.cpp Helpers/helper.cpp)
add_executable(Day24 day24.cpp Helpers/helper.cpp)
add_executable(Main main.cpp)
